--- a/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
+++ b/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\ECommerce.CoreEntityBusiness\ECommerce.CoreEntityBusiness.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\" />
+  </ItemGroup>
+
 </Project>
