everything is up to date and working

--- a/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
+++ b/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
@@ -23,4 +23,11 @@
     <ProjectReference Include="..\ECommerce.CoreEntityBusiness\ECommerce.CoreEntityBusiness.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Components\Pages\ShoppingCart.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
