--- a/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
+++ b/E-CommerceStore/E-CommerceStore.WebApp/E-CommerceStore.WebApp.csproj
@@ -30,4 +30,8 @@
     </Content>
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="dotnet test &quot;E-Commerce.XunitTest\E-Commerce.XunitTest.csproj&quot;" />
+  </Target>
+
 </Project>
